<resources>

    <string name="app_name">RoomDatabase</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="recurring">Recurring</string>
    <string name="do_not_repeat">Don\'t repeat</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly (on Thursday\'s)</string>
    <string name="monthly">Monthly (on the last Thursday)</string>
    <string name="annually">Annually (on April 29)</string>
    <string name="week_days">Weekdays only (Mon - Fri)</string>

    <string name="title_activity_main3">MainActivity3</string>

</resources>