<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.BlankFragment">

    <LinearLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/viewLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/tvRecurring"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recurring"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_8"
            android:src="@drawable/ic_close" />

    </LinearLayout>

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_20"
        android:background="#d4d4d4"
        app:layout_constraintTop_toBottomOf="@id/layoutTop" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@id/viewLine">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/do_not_repeat"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <RadioButton
                android:id="@+id/radioButtonOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/radio_button_checked"
                android:checked="true" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daily"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <RadioButton
                android:id="@+id/radioButtonTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvWeekly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weekly"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <RadioButton
                android:id="@+id/radioButtonThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMonthly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monthly"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <RadioButton
                android:id="@+id/radioButtonFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAnnually"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/annually"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <RadioButton
                android:id="@+id/radioButtonFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/week_days"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <RadioButton
                android:id="@+id/radioButtonSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>